[package]
name = "actix-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt="2.7.0"
actix-web="4.1.0"
# serialize
serde ={version="1.0.14",features=["derive"]}
dotenv="0.15.0"
config="0.13.2"
